--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <script src="node_modules/less/dist/less.min.js"></script>
 -->
 
-    <title>Hello, world!</title>
+    <title>Hello!</title>
 </head>
 <body>
 <!--    <header>
