--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <script src="node_modules/less/dist/less.min.js"></script>
 -->
 
-    <title>Комп'ютерний практикум №3. Git і GitHub</title>
+    <title>Комп'ютерний практикум №3. Git і GitHub!</title>
 </head>
 <body>
 <!--    <header>
