--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <title>Комп'ютерний практикум №3. Git і GitHub! Welcome!!!</title>
 </head>
 <body>
+<h1>Робота з GitHub</h1>
 <!--    <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
